--- a/nth Dimensional MineSweeper/nth Dimensional MineSweeper.vcxproj.vcxproj
+++ b/nth Dimensional MineSweeper/nth Dimensional MineSweeper.vcxproj.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e2172fb8-5ec4-4059-8028-d5cf1a0dac61}</ProjectGuid>
-    <RootNamespace>nthDimensionalChess</RootNamespace>
+    <ProjectGuid>{5596716A-684B-43F6-BCF9-2F220442D809}</ProjectGuid>
+    <RootNamespace>nthDimensionalMineSweeper</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>nth Dimensional MineSweeper</ProjectName>
   </PropertyGroup>
